--- a/packages/extended-text-entry/package.json
+++ b/packages/extended-text-entry/package.json
@@ -14,8 +14,8 @@
   "author": "Mukesh Sharma",
   "license": "ISC",
   "dependencies": {
-    "@pie-lib/editable-html": "^2.2.1",
-    "@pie-lib/pie-player-events": "0.0.1",
+    "@pie-framework/pie-player-events": "^0.1.0",
+    "@pie-lib/editable-html": "^2.2.4",
     "material-ui": "^1.0.0-beta.27",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
