fix(repository): fix repository

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pie-ui/pie-elements",
+  "name": "@pie-ui/pie-ui",
   "description": "the pie-elements mono repo",
   "private": true,
   "license": "MIT",
