--- a/packages/extended-text-entry/package.json
+++ b/packages/extended-text-entry/package.json
@@ -2,6 +2,7 @@
   "name": "@pie-ui/extended-text-entry",
   "version": "0.0.1",
   "description": "",
+  "repository": "pie-framework/pie-ui",
   "main": "src/index.js",
   "publishConfig": {
     "access": "public"
