--- a/packages/inline-choice/package.json
+++ b/packages/inline-choice/package.json
@@ -2,6 +2,7 @@
   "name": "@pie-ui/inline-choice",
   "version": "2.0.0",
   "description": "",
+  "repository": "pie-framework/pie-ui",
   "main": "src/index.js",
   "scripts": {
     "client-test": "cd src && jest src",
