--- a/packages/multiple-choice/package.json
+++ b/packages/multiple-choice/package.json
@@ -7,10 +7,7 @@
   ],
   "version": "2.0.0",
   "main": "src/index.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/pie-framework/pie-elements.git"
-  },
+  "repository": "pie-framework/pie-elements.git",
   "publishConfig": {
     "access": "public"
   },
