--- a/packages/number-line/package.json
+++ b/packages/number-line/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "./node_modules/.bin/mocha --require babel-register --recursive test && cd controller && npm test"
   },
-  "repository": "PieElements/pie-elements",
+  "repository": "pie-framework/pie-ui",
   "author": "corespring",
   "license": "ISC",
   "dependencies": {
