--- a/packages/placement-ordering/package.json
+++ b/packages/placement-ordering/package.json
@@ -6,10 +6,7 @@
   "keywords": [
     "pie"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/pie-framework/pie-elements"
-  },
+  "repository": "pie-framework/pie-ui",
   "publishConfig": {
     "access": "public"
   },
