fix(build): add eslint and editor config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,27 +1,42 @@
 {
-    "env": {
-        "browser": true,
-        "commonjs": true,
-        "es6": true,
-        "node": true,
-        "mocha": true
+  "parser": "babel-eslint",
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ],
+  "env": {
+    "browser": true,
+    "commonjs": true,
+    "es6": true,
+    "node": false
+  },
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
     },
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "sourceType": "module"
-    },
-    "rules": {
-        "no-const-assign": "warn",
-        "no-this-before-super": "warn",
-        "no-undef": "warn",
-        "no-unreachable": "warn",
-        "no-unused-vars": "warn",
-        "constructor-super": "warn",
-        "valid-typeof": "warn"
-    },
-    "plugins": [
-        "react"
-    ]
+    "sourceType": "module"
+  },
+  "rules": {
+    "quotes": [
+      "warn",
+      "single"
+    ],
+    "strict": 0,
+    "react/prop-types": "warn",
+    "react/jsx-no-duplicate-props": "warn",
+    "react/no-deprecated": "warn",
+    "react/display-name": "warn",
+    "no-extra-semi": "warn",
+    "no-dupe-keys": "warn",
+    "no-const-assign": "warn",
+    "no-this-before-super": "warn",
+    "no-undef": "warn",
+    "no-unreachable": "warn",
+    "no-unused-vars": "warn",
+    "jsx-uses-vars": true,
+    "constructor-super": "warn",
+    "valid-typeof": "warn",
+    "no-case-declarations": "warn",
+    "no-console": "warn"
+  }
 }
