--- a/packages/extended-text-entry/package.json
+++ b/packages/extended-text-entry/package.json
@@ -17,10 +17,12 @@
   "dependencies": {
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/editable-html": "^2.2.4",
-    "material-ui": "^1.0.0-beta.27",
+    "lodash.throttle": "^4.1.1",
+    "material-ui": "^1.0.0-beta.22",
+    "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"    
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -33,6 +35,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-15": "^1.0.5",
     "jest": "^22.3.0",
+    "lodash": "^4.17.5",
     "react-test-renderer": "^16.2.0",
     "style-loader": "^0.20.2"
   }
