--- a/packages/point-intercept/package.json
+++ b/packages/point-intercept/package.json
@@ -7,6 +7,7 @@
   "description": "",
   "main": "src/index.js",
   "dependencies": {
+    "@pie-lib/correct-answer-toggle": "^0.1.9",
     "@pie-lib/charting": "^0.0.1",
     "debug": "^3.1.0",
     "material-ui": "1.0.0-beta.27",
