--- a/packages/point-intercept/package.json
+++ b/packages/point-intercept/package.json
@@ -3,8 +3,9 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description":
+    "An interaction to allow students identify coordinates or plot points on a graph by clicking on the graph.",
   "main": "src/index.js",
   "dependencies": {
     "@pie-lib/correct-answer-toggle": "^0.1.9",
