--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "lint": "./node_modules/.bin/eslint --ext .js --ext .jsx packages"
   },
   "devDependencies": {
-    "lerna": "^2.5.1",
+    "babel-eslint": "^8.2.2",
     "eslint": "^4.18.2",
     "eslint-plugin-react": "^7.7.0",
-    "babel-eslint": "^8.2.2"
+    "lerna": "^2.5.1"
   }
 }
