Added test for ui

--- a/packages/extended-text-entry/package.json
+++ b/packages/extended-text-entry/package.json
@@ -8,9 +8,7 @@
     "access": "public"
   },
   "scripts": {
-    "client-test": "cd src && jest src",
-    "controller-test": "cd controller && jest --verbose",
-    "test": "npm run client-test"
+    "test": "./node_modules/.bin/jest --verbose"
   },
   "author": "Mukesh Sharma",
   "license": "ISC",
@@ -24,18 +22,23 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "lodash": "^4.17.5",
     "babel-core": "^6.26.0",
-    "babel-jest": "^22.2.2",
-    "babel-loader": "^7.1.2",
+    "babel-jest": "^22.1.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-airbnb": "^2.4.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-15": "^1.0.5",
-    "jest": "^22.3.0",
-    "lodash": "^4.17.5",
-    "react-test-renderer": "^16.2.0",
-    "style-loader": "^0.20.2"
+    "jest": "^22.1.4",
+    "react-test-renderer": "^15.6.1"    
+  },
+  "jest": {
+    "setupFiles": [
+      "./jestsetup.js"
+    ]
   }
 }
