--- a/packages/calculator/package.json
+++ b/packages/calculator/package.json
@@ -3,6 +3,9 @@
   "version": "1.1.0",
   "description": "A pie calculator component",
   "main": "src/index.js",
+  "publishConfig" : {
+    "access" : "public"
+  },
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
