--- a/packages/extended-text-entry/package.json
+++ b/packages/extended-text-entry/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@pie-framework/pie-player-events": "^0.1.0",
+    "@pie-lib/editable-html": "^2.2.5",
     "lodash.throttle": "^4.1.1",
     "material-ui": "^1.0.0-beta.22",
     "material-ui-icons": "^1.0.0-beta.17",
@@ -22,9 +23,9 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
-    "lodash": "^4.17.5",
     "babel-core": "^6.26.0",
     "babel-jest": "^22.1.0",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-airbnb": "^2.4.0",
     "babel-preset-env": "^1.6.1",
@@ -34,7 +35,9 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-15": "^1.0.5",
     "jest": "^22.1.4",
-    "react-test-renderer": "^15.6.1"    
+    "lodash": "^4.17.5",
+    "react-test-renderer": "^15.6.1",
+    "style-loader": "^0.20.3"
   },
   "jest": {
     "setupFiles": [
