--- a/packages/ruler/package.json
+++ b/packages/ruler/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "publishConfig": {
     "access": "public"
-  },  
+  },
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,7 +17,8 @@
     "material-ui": "^1.0.0-beta.27",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-draggable": "^3.0.5"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -32,5 +33,5 @@
     "jest": "^22.3.0",
     "react-test-renderer": "^16.2.0",
     "style-loader": "^0.20.2"
-  }  
+  }
 }
