fix(dependencies): use 1.1.2 of material-ui-calculator

--- a/packages/calculator/package.json
+++ b/packages/calculator/package.json
@@ -12,12 +12,8 @@
     "test:coverage": "jest --coverage"
   },
   "jest": {
-    "setupFiles": [
-      "./jestsetup.js"
-    ],
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
+    "setupFiles": ["./jestsetup.js"],
+    "snapshotSerializers": ["enzyme-to-json/serializer"],
     "moduleNameMapper": {
       "^.+\\.(css|scss)$": "identity-obj-proxy"
     }
@@ -25,7 +21,7 @@
   "author": "harry",
   "license": "ISC",
   "dependencies": {
-    "@pie-framework/material-ui-calculator": "^1.1.1",
+    "@pie-framework/material-ui-calculator": "^1.1.2",
     "classnames": "^2.2.5",
     "material-ui": "^1.0.0-beta.27",
     "material-ui-icons": "^1.0.0-beta.17",
