--- a/packages/calculator/package.json
+++ b/packages/calculator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pie-ui/calculator",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "A calculator component",
   "main": "src/index.js",
   "publishConfig": {
@@ -12,8 +12,12 @@
     "test:coverage": "jest --coverage"
   },
   "jest": {
-    "setupFiles": ["./jestsetup.js"],
-    "snapshotSerializers": ["enzyme-to-json/serializer"],
+    "setupFiles": [
+      "./jestsetup.js"
+    ],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
     "moduleNameMapper": {
       "^.+\\.(css|scss)$": "identity-obj-proxy"
     }
