--- a/packages/extended-text-entry/package.json
+++ b/packages/extended-text-entry/package.json
@@ -14,14 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "@pie-framework/pie-player-events": "^0.1.0",
-    "@pie-lib/editable-html": "^3.1.1",
+    "@pie-lib/editable-html": "^4.0.2",
     "debug": "^3.1.0",
     "lodash.throttle": "^4.1.1",
-    "material-ui": "^1.0.0-beta.22",
-    "material-ui-icons": "^1.0.0-beta.17",
+    "material-ui": "^1.0.0-beta.41",
+    "@material-ui/icons": "^1.0.0-beta.42",
     "prop-types": "^15.6.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -34,15 +34,12 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-15": "^1.0.5",
+    "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^22.1.4",
     "lodash": "^4.17.5",
-    "react-test-renderer": "^15.6.1",
     "style-loader": "^0.20.3"
   },
   "jest": {
-    "setupFiles": [
-      "./jestsetup.js"
-    ]
+    "setupFiles": ["./jestsetup.js"]
   }
 }
