--- a/packages/inline-choice/package.json
+++ b/packages/inline-choice/package.json
@@ -5,9 +5,7 @@
   "repository": "pie-framework/pie-ui",
   "main": "src/index.js",
   "scripts": {
-    "client-test": "cd src && jest src",
-    "controller-test": "cd controller && jest --verbose",
-    "test": "npm run client-test &&  npm run controller-test"
+    "test": "./node_modules/.bin/jest"
   },
   "publishConfig": {
     "access": "public"
@@ -16,48 +14,33 @@
   "license": "ISC",
   "dependencies": {
     "@pie-framework/pie-player-events": "^0.1.0",
-    "@pie-lib/icons": "^0.3.1",
-    "@pie-lib/render-ui": "^0.1.10",
+    "@pie-lib/icons": "^1.0.0",
+    "@pie-lib/render-ui": "^1.0.0",
     "classnames": "^2.2.5",
-    "lodash": "^4.17.4",
-    "material-ui": "^1.0.0-beta.22",
-    "material-ui-icons": "^1.0.0-beta.17",
-    "prop-types": "^15.6.0",
-    "react": "^15.6.1",
-    "react-addons-css-transition-group": "^15.6.0",
-    "react-dom": "^15.6.1"
+    "lodash": "^4.17.5",
+    "material-ui": "^1.0.0-beta.41",
+    "prop-types": "^15.6.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
   },
   "devDependencies": {
     "babel": "^6.23.0",
-    "babel-cli": "^6.24.1",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-jest": "^22.1.0",
-    "babel-loader": "^7.1.1",
+    "babel-jest": "^22.4.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-airbnb": "^2.4.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "chai": "^4.1.2",
-    "css-loader": "^0.28.4",
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-15": "^1.0.5",
-    "jest": "^22.1.4",
-    "less": "^2.7.2",
-    "less-loader": "^4.0.5",
-    "postcss-loader": "^2.0.6",
-    "react-addons-test-utils": "^15.6.2",
-    "react-test-renderer": "15.6.1",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.3.0",
-    "webpack-dev-server": "^2.5.1"
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jest": "^22.4.3",
+    "react-test-renderer": "^16.3.2"
   },
   "jest": {
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "configure"
-    ]
+    "testPathIgnorePatterns": ["/node_modules/", "configure"]
   }
 }
