fix(dependencies): number-line version bump and test update
BREAKING CHANGE: use react@16.x

--- a/packages/number-line/.babelrc
+++ b/packages/number-line/.babelrc
@@ -1,9 +1,4 @@
 {
   "sourceMaps": "inline",
-  "presets": [
-    "airbnb"
-  ],
-  "plugins": [
-    "transform-es2015-modules-commonjs"
-  ]
+  "presets": ["env", "react", "stage-0"]
 }
