--- a/packages/number-line/demo/config.json
+++ b/packages/number-line/demo/config.json
@@ -1,7 +1,5 @@
 {
-  "langs": [
-    "en-US"
-  ],
+  "langs": ["en-US"],
   "elements": {
     "number-line": ".."
   },
@@ -24,10 +22,8 @@
         }
       ],
       "feedback": {
-        "correctFeedbackType": "default",
-        "partialFeedbackType": "default",
-        "incorrectFeedbackType": "custom",
-        "incorrectFeedback": "<h1>incorrect</h1>"
+        "type": "correct",
+        "message": "foo"
       },
       "allowPartialScoring": true,
       "partialScoring": [
@@ -36,40 +32,35 @@
           "scorePercentage": 35
         }
       ],
-      "model": {
-        "config": {
-          "width": 500,
-          "height": 400,
-          "domain": [
-            -5,
-            5
-          ],
-          "initialElements": [
-            {
-              "type": "point",
-              "pointType": "empty",
-              "domainPosition": -1
-            }
-          ],
-          "maxNumberOfPoints": 20,
-          "tickFrequency": 6,
-          "showMinorTicks": true,
-          "snapPerTick": 1,
-          "tickLabelOverrides": [],
-          "initialType": "PF",
-          "exhibitOnly": false,
-          "availableTypes": {
-            "PF": true,
-            "PE": true,
-            "LFF": true,
-            "LEF": true,
-            "LFE": true,
-            "LEE": true,
-            "RFN": true,
-            "RFP": true,
-            "REN": true,
-            "REP": true
+      "config": {
+        "width": 500,
+        "height": 400,
+        "domain": [-5, 5],
+        "initialElements": [
+          {
+            "type": "point",
+            "pointType": "empty",
+            "domainPosition": -1
           }
+        ],
+        "maxNumberOfPoints": 20,
+        "tickFrequency": 6,
+        "showMinorTicks": true,
+        "snapPerTick": 1,
+        "tickLabelOverrides": [],
+        "initialType": "PF",
+        "exhibitOnly": false,
+        "availableTypes": {
+          "PF": true,
+          "PE": true,
+          "LFF": true,
+          "LEF": true,
+          "LFE": true,
+          "LEE": true,
+          "RFN": true,
+          "RFP": true,
+          "REN": true,
+          "REP": true
         }
       }
     }
