--- a/packages/number-line-controller/package.json
+++ b/packages/number-line-controller/package.json
@@ -1,19 +1,28 @@
 {
   "name": "@pie-ui/number-line-controller",
   "version": "1.0.2",
-  "description": "",
-  "main": "index.js",
+  "description": "Controller logic for @pie-ui/number-line",
+  "keywords": ["pie", "number-line"],
+  "repository": "pie-framework/pie-ui",
+  "main": "src/index.js",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.5"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "devDependencies": {
-    "chai-shallow-deep-equal": "^1.4.4"
+    "jest": "^22.4.3",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-jest": "^22.4.3"
   },
   "scripts": {
-    "test": "../node_modules/.bin/mocha --require babel-register test/**"
+    "test": "./node_modules/.bin/jest"
   },
   "author": "",
   "license": "ISC"
