--- a/packages/placement-ordering/package.json
+++ b/packages/placement-ordering/package.json
@@ -3,9 +3,7 @@
   "version": "2.0.1",
   "main": "src/index.js",
   "description": "A pie placement component",
-  "keywords": [
-    "pie"
-  ],
+  "keywords": ["pie"],
   "repository": "pie-framework/pie-ui",
   "publishConfig": {
     "access": "public"
@@ -13,46 +11,38 @@
   "scripts": {
     "test": "./node_modules/.bin/jest"
   },
+  "dependencies": {
+    "@pie-lib/correct-answer-toggle": "^1.0.1",
+    "@pie-lib/render-ui": "^1.0.0",
+    "debug": "^3.1.0",
+    "decimal.js": "^10.0.0",
+    "katex": "^0.9.0",
+    "lodash": "^4.17.5",
+    "material-ui": "1.0.0-beta.41",
+    "prop-types": "^15.6.1",
+    "react": "~16.3.2",
+    "react-dnd": "^2.6.0",
+    "react-dnd-html5-backend": "^2.6.0",
+    "react-dom": "^16.3.2",
+    "react-jss": "^8.4.0",
+    "react-transition-group": "^2.3.1"
+  },
+
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "babel": "^6.23.0",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-jest": "^22.4.1",
-    "babel-loader": "^7.1.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-jest": "^22.4.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-syntax-decorators": "^6.13.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^0.28.4",
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-15": "^1.0.5",
-    "jest": "^22.4.2",
-    "jquery": "^3.2.1",
-    "json-loader": "^0.5.7",
-    "less": "^2.7.2",
-    "less-loader": "^4.0.5",
-    "react-addons-test-utils": "^15.6.0",
-    "react-dnd-test-backend": "^2.4.0",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.5.3",
-    "webpack-dev-server": "^2.7.1"
-  },
-  "dependencies": {
-    "@pie-lib/correct-answer-toggle": "^0.1.6",
-    "@pie-lib/render-ui": "^0.1.10",
-    "debug": "^3.1.0",
-    "decimal.js": "^7.2.3",
-    "katex": "^0.8.3",
-    "less": "^2.7.2",
-    "lodash": "^4.17.4",
-    "material-ui": "1.0.0-beta.27",
-    "prop-types": "^15.5.10",
-    "react": "~15.6.1",
-    "react-dnd": "^2.4.0",
-    "react-dnd-html5-backend": "^2.4.1",
-    "react-dom": "^15.6.1",
-    "react-jss": "^7.0.2",
-    "react-transition-group": "^2.2.0"
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.3",
+    "jest": "^22.4.3",
+    "react-dnd-test-backend": "^2.6.0"
   }
 }
