--- a/packages/text-entry/package.json
+++ b/packages/text-entry/package.json
@@ -1,10 +1,7 @@
 {
   "name": "@pie-ui/text-entry",
   "description": "A pie text-entry component",
-  "keywords": [
-    "pie",
-    "pie-elements"
-  ],
+  "keywords": ["pie", "pie-elements"],
   "version": "1.0.1",
   "main": "src/index.js",
   "repository": "pie-framework/pie-ui",
@@ -13,38 +10,33 @@
   },
   "license": "ISC",
   "scripts": {
-    "client-test": "jest",
-    "controller-test": "cd controller && npm test",
-    "configure-test": "cd configure && npm test",
-    "test": "npm run client-test && npm run controller-test && npm run configure-test"
+    "test": "./node_modules/.bin/jest"
   },
   "dependencies": {
     "@pie-framework/pie-player-events": "^0.1.0",
-    "@pie-lib/render-ui": "^0.1.10",
-    "debug": "^3.0.1",
-    "lodash": "^4.17.4",
-    "material-ui": "^1.0.0-beta.27",
-    "material-ui-icons": "^1.0.0-beta.17",
-    "react": "^15.6.1",
-    "react-addons-css-transition-group": "^15.6.0",
-    "react-dom": "^15.6.1",
+    "@pie-lib/render-ui": "^1.0.0",
+    "debug": "^3.1.0",
+    "lodash": "^4.17.5",
+    "material-ui": "^1.0.0-beta.41",
+    "@material-ui/icons": "^1.0.0-beta.42",
+    "react": "^16.3.2",
+    "react-transition-group": "^2.3.1",
+    "react-dom": "^16.3.2",
     "react-number-format": "PieElements/react-number-format#feature/bad-input"
   },
   "devDependencies": {
     "babel": "^6.23.0",
-    "babel-cli": "^6.24.1",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-jest": "^22.1.0",
-    "babel-loader": "^7.1.1",
+    "babel-jest": "^22.4.3",
+    "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.24.1",
+    "babel-register": "^6.26.0",
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-15": "^1.0.5",
-    "jest": "^22.1.1",
-    "react-addons-test-utils": "^15.6.0",
-    "react-test-renderer": "^15.6.1",
-    "sinon": "^4.2.2"
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.3",
+    "jest": "^22.4.3"
   }
 }
