--- a/packages/multiple-choice/package.json
+++ b/packages/multiple-choice/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@pie-ui/multiple-choice",
   "description": "A pie multiple choice component",
-  "keywords": ["pie", "pie-elements"],
-  "version": "2.0.1",
+  "keywords": [
+    "pie",
+    "pie-elements"
+  ],
+  "version": "3.0.0",
   "main": "src/index.js",
   "repository": "pie-framework/pie-elements.git",
   "publishConfig": {
@@ -13,7 +16,9 @@
     "test": "./node_modules/.bin/jest"
   },
   "jest": {
-    "setupFiles": ["./jest.setup.js"]
+    "setupFiles": [
+      "./jest.setup.js"
+    ]
   },
   "dependencies": {
     "@pie-lib/correct-answer-toggle": "^1.0.1",
