--- a/packages/calculator/package.json
+++ b/packages/calculator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pie-ui/calculator",
-  "version": "1.3.0",
+  "version": "2.0.0",
   "description": "A calculator component",
   "main": "src/index.js",
   "publishConfig": {
@@ -12,8 +12,12 @@
     "test:coverage": "jest --coverage"
   },
   "jest": {
-    "setupFiles": ["./jestsetup.js"],
-    "snapshotSerializers": ["enzyme-to-json/serializer"],
+    "setupFiles": [
+      "./jestsetup.js"
+    ],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
     "moduleNameMapper": {
       "^.+\\.(css|scss)$": "identity-obj-proxy"
     }
@@ -21,14 +25,14 @@
   "author": "harry",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/icons": "^1.0.0-beta.42",
     "@pie-framework/material-ui-calculator": "^2.0.0",
     "classnames": "^2.2.5",
     "material-ui": "^1.0.0-beta.41",
-    "@material-ui/icons": "^1.0.0-beta.42",
     "prop-types": "^15.6.1",
-    "react-draggable": "^3.0.5",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-draggable": "^3.0.5"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -51,7 +55,7 @@
     "power-assert": "^1.5.0",
     "react-test-renderer": "^16.3.2",
     "webpack": "^4.5.0",
-    "webpack-dev-server": "^3.1.3",
-    "webpack-cli": "^2.0.14"
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   }
 }
