--- a/packages/extended-text-entry/package.json
+++ b/packages/extended-text-entry/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pie-ui/extended-text-entry",
-  "version": "0.0.8",
+  "version": "1.0.0",
   "description": "",
   "repository": "pie-framework/pie-ui",
   "main": "src/index.js",
@@ -13,12 +13,12 @@
   "author": "Mukesh Sharma",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/icons": "^1.0.0-beta.42",
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/editable-html": "^4.0.2",
     "debug": "^3.1.0",
     "lodash.throttle": "^4.1.1",
     "material-ui": "^1.0.0-beta.41",
-    "@material-ui/icons": "^1.0.0-beta.42",
     "prop-types": "^15.6.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
@@ -40,6 +40,8 @@
     "style-loader": "^0.20.3"
   },
   "jest": {
-    "setupFiles": ["./jestsetup.js"]
+    "setupFiles": [
+      "./jestsetup.js"
+    ]
   }
 }
