--- a/packages/number-line-controller/package.json
+++ b/packages/number-line-controller/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@pie-ui/number-line-controller",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Controller logic for @pie-ui/number-line",
-  "keywords": ["pie", "number-line"],
+  "keywords": [
+    "pie",
+    "number-line"
+  ],
   "repository": "pie-framework/pie-ui",
   "main": "src/index.js",
   "publishConfig": {
@@ -15,11 +18,11 @@
     "testEnvironment": "node"
   },
   "devDependencies": {
-    "jest": "^22.4.3",
     "babel-core": "^6.26.0",
+    "babel-jest": "^22.4.3",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-jest": "^22.4.3"
+    "jest": "^22.4.3"
   },
   "scripts": {
     "test": "./node_modules/.bin/jest"
