--- a/packages/number-line/package.json
+++ b/packages/number-line/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pie-ui/number-line",
-  "version": "2.0.2",
+  "version": "3.0.0",
   "description": "A number line interaction for pie",
   "main": "src/index.js",
   "publishConfig": {
@@ -21,22 +21,22 @@
     "lodash": "^4.17.5",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
-    "react-transition-group": "^2.3.1",
     "react-dom": "^16.3.2",
     "react-draggable": "^3.0.5",
-    "react-jss": "^8.4.0"
+    "react-jss": "^8.4.0",
+    "react-transition-group": "^2.3.1"
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
     "babel-core": "^6.26.0",
     "babel-jest": "^22.4.3",
-    "jest": "^22.4.3",
     "babel-loader": "^7.1.4",
-    "babel-preset-react": "^6.24.1",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "enzyme": "^3.3.0",
     "enzyme-react-16": "^1.0.0",
-    "enzyme-to-json": "^3.3.3"
+    "enzyme-to-json": "^3.3.3",
+    "jest": "^22.4.3"
   }
 }
