--- a/packages/placement-ordering/package.json
+++ b/packages/placement-ordering/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@pie-ui/placement-ordering",
-  "version": "2.0.1",
+  "version": "3.0.0",
   "main": "src/index.js",
   "description": "A pie placement component",
-  "keywords": ["pie"],
+  "keywords": [
+    "pie"
+  ],
   "repository": "pie-framework/pie-ui",
   "publishConfig": {
     "access": "public"
@@ -27,7 +29,6 @@
     "react-jss": "^8.4.0",
     "react-transition-group": "^2.3.1"
   },
-
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "babel": "^6.23.0",
