--- a/packages/protractor/package.json
+++ b/packages/protractor/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-draggable": "^3.0.5",
+    "webpack": "^4.6.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
