--- a/packages/point-intercept/package.json
+++ b/packages/point-intercept/package.json
@@ -7,8 +7,9 @@
   "description": "An interaction to allow students identify coordinates or plot points on a graph by clicking on the graph.",
   "main": "src/index.js",
   "dependencies": {
+    "@pie-lib/charting": "../../../pie-lib/packages/charting",
     "@pie-lib/correct-answer-toggle": "^0.1.9",
-    "@pie-lib/charting": "^0.1.0",
+    "@pie-lib/render-ui": "^2.0.6",
     "debug": "^3.1.0",
     "material-ui": "1.0.0-beta.27",
     "material-ui-icons": "^1.0.0-beta.36",
