fix(dependencies): bump dependencies

--- a/packages/multiple-choice/package.json
+++ b/packages/multiple-choice/package.json
@@ -1,10 +1,7 @@
 {
   "name": "@pie-ui/multiple-choice",
   "description": "A pie multiple choice component",
-  "keywords": [
-    "pie",
-    "pie-elements"
-  ],
+  "keywords": ["pie", "pie-ui", "custom-element", "react"],
   "version": "3.0.0",
   "main": "src/index.js",
   "repository": "pie-framework/pie-elements.git",
@@ -16,18 +13,16 @@
     "test": "./node_modules/.bin/jest"
   },
   "jest": {
-    "setupFiles": [
-      "./jest.setup.js"
-    ]
+    "setupFiles": ["./jest.setup.js"]
   },
   "dependencies": {
-    "@pie-lib/correct-answer-toggle": "^1.0.1",
-    "@pie-lib/render-ui": "^1.0.0",
+    "@pie-lib/correct-answer-toggle": "^2.0.5",
+    "@pie-lib/render-ui": "^2.0.6",
     "debug": "^3.1.0",
     "enzyme-to-json": "^3.3.3",
     "katex": "^0.9.0",
     "lodash": "^4.17.5",
-    "material-ui": "^1.0.0-beta.41",
+    "material-ui": "^1.0.0-beta.43",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
