--- a/packages/placement-ordering/package.json
+++ b/packages/placement-ordering/package.json
@@ -3,9 +3,7 @@
   "version": "3.0.0",
   "main": "src/index.js",
   "description": "A pie placement component",
-  "keywords": [
-    "pie"
-  ],
+  "keywords": ["pie"],
   "repository": "pie-framework/pie-ui",
   "publishConfig": {
     "access": "public"
@@ -14,13 +12,13 @@
     "test": "./node_modules/.bin/jest"
   },
   "dependencies": {
-    "@pie-lib/correct-answer-toggle": "^1.0.1",
-    "@pie-lib/render-ui": "^1.0.0",
+    "@pie-lib/correct-answer-toggle": "^2.0.6",
+    "@pie-lib/render-ui": "^2.0.7",
     "debug": "^3.1.0",
     "decimal.js": "^10.0.0",
     "katex": "^0.9.0",
     "lodash": "^4.17.5",
-    "material-ui": "1.0.0-beta.41",
+    "material-ui": "1.0.0-beta.43",
     "prop-types": "^15.6.1",
     "react": "~16.3.2",
     "react-dnd": "^2.6.0",
