--- a/packages/text-entry/package.json
+++ b/packages/text-entry/package.json
@@ -1,10 +1,7 @@
 {
   "name": "@pie-ui/text-entry",
   "description": "A pie text-entry component",
-  "keywords": [
-    "pie",
-    "pie-elements"
-  ],
+  "keywords": ["pie", "pie-elements"],
   "version": "2.0.0",
   "main": "src/index.js",
   "repository": "pie-framework/pie-ui",
@@ -16,12 +13,12 @@
     "test": "./node_modules/.bin/jest"
   },
   "dependencies": {
-    "@material-ui/icons": "^1.0.0-beta.42",
+    "@material-ui/icons": "^1.0.0-beta.43",
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/render-ui": "^1.0.0",
     "debug": "^3.1.0",
     "lodash": "^4.17.5",
-    "material-ui": "^1.0.0-beta.41",
+    "material-ui": "^1.0.0-beta.43",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-number-format": "PieElements/react-number-format#feature/bad-input",
