--- a/packages/extended-text-entry/package.json
+++ b/packages/extended-text-entry/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pie-ui/extended-text-entry",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "repository": "pie-framework/pie-ui",
   "main": "src/index.js",
@@ -40,6 +40,8 @@
     "style-loader": "^0.21.0"
   },
   "jest": {
-    "setupFiles": ["./jestsetup.js"]
+    "setupFiles": [
+      "./jestsetup.js"
+    ]
   }
 }
