--- a/packages/inline-choice/package.json
+++ b/packages/inline-choice/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pie-ui/inline-choice",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "",
   "repository": "pie-framework/pie-ui",
   "main": "src/index.js",
@@ -41,6 +41,9 @@
     "react-test-renderer": "^16.3.2"
   },
   "jest": {
-    "testPathIgnorePatterns": ["/node_modules/", "configure"]
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "configure"
+    ]
   }
 }
