--- a/package.json
+++ b/package.json
@@ -5,12 +5,24 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint --ext .js --ext .jsx packages"
+    "lint": "./node_modules/.bin/eslint --ext .js --ext .jsx packages",
+    "test": "jest"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
     "eslint": "^4.18.2",
     "eslint-plugin-react": "^7.7.0",
-    "lerna": "^2.5.1"
+    "lerna": "^2.5.1",
+    "jest": "^22.4.3",
+    "babel-jest": "^22.4.3",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-core": "^6.26.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.3",
+    "react": "^16.3.2",
+    "react-dom": "16.3.2"
   }
 }
