--- a/packages/point-intercept/package.json
+++ b/packages/point-intercept/package.json
@@ -7,14 +7,14 @@
   "description": "An interaction to allow students identify coordinates or plot points on a graph by clicking on the graph.",
   "main": "src/index.js",
   "dependencies": {
-    "@pie-lib/charting": "../../../pie-lib/packages/charting",
+    "@pie-lib/charting": "^2.2.0",
     "@pie-lib/correct-answer-toggle": "^0.1.9",
-    "@pie-lib/render-ui": "^2.0.6",
+    "@pie-lib/render-ui": "^2.0.7",
     "debug": "^3.1.0",
-    "material-ui": "1.0.0-beta.27",
-    "material-ui-icons": "^1.0.0-beta.36",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "material-ui": "1.0.0-beta.43",
+    "material-ui-icons": "^1.0.0-beta.42",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
