--- a/packages/protractor/package.json
+++ b/packages/protractor/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-draggable": "^3.0.5",
-    "webpack": "^4.6.0"
+    "@pie-lib/tools": "^0.1.3",
+    "material-ui": "^1.0.0-beta.44",
+    "classnames": "^2.2.5"
   },
   "devDependencies": {
     "babel": "^6.23.0",
