--- a/packages/protractor/package.json
+++ b/packages/protractor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "protractor",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Protractor UI",
   "main": "src/index.js",
   "publishConfig": {
@@ -10,11 +10,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
     "@pie-lib/tools": "^0.1.3",
+    "classnames": "^2.2.5",
     "material-ui": "^1.0.0-beta.44",
-    "classnames": "^2.2.5"
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
   },
   "devDependencies": {
     "babel": "^6.23.0",
