--- a/packages/protractor/package.json
+++ b/packages/protractor/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "protractor",
+  "name": "@pie-ui/protractor",
   "version": "1.1.0",
-  "description": "Protractor UI",
+  "description": "A protractor custom element",
+  "keywords": ["pie", "protractor"],
   "main": "src/index.js",
   "publishConfig": {
     "access": "public"
@@ -10,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@pie-lib/tools": "^0.1.3",
+    "@pie-lib/tools": "^0.2.0",
     "classnames": "^2.2.5",
     "material-ui": "^1.0.0-beta.44",
     "react": "^16.3.2",
