--- a/packages/ruler/package.json
+++ b/packages/ruler/package.json
@@ -14,11 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "@pie-framework/pie-player-events": "^0.1.0",
-    "material-ui": "^1.0.0-beta.27",
+    "@pie-lib/tools": "^0.3.0",
+    "material-ui": "^1.0.0-beta.44",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-draggable": "^3.0.5"
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
