--- a/packages/protractor/package.json
+++ b/packages/protractor/package.json
@@ -2,10 +2,7 @@
   "name": "@pie-ui/protractor",
   "version": "1.2.3",
   "description": "A protractor custom element",
-  "keywords": [
-    "pie",
-    "protractor"
-  ],
+  "keywords": ["pie", "protractor"],
   "main": "src/index.js",
   "publishConfig": {
     "access": "public"
@@ -14,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@pie-lib/tools": "^0.3.0",
+    "@pie-lib/tools": "^0.4.0",
     "classnames": "^2.2.5",
     "material-ui": "^1.0.0-beta.44",
     "react": "^16.3.2",
