--- a/packages/protractor/package.json
+++ b/packages/protractor/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@pie-ui/protractor",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "A protractor custom element",
-  "keywords": ["pie", "protractor"],
+  "keywords": [
+    "pie",
+    "protractor"
+  ],
   "main": "src/index.js",
   "publishConfig": {
     "access": "public"
