--- a/packages/point-intercept/package.json
+++ b/packages/point-intercept/package.json
@@ -3,17 +3,16 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "0.0.1",
-  "description":
-    "An interaction to allow students identify coordinates or plot points on a graph by clicking on the graph.",
+  "version": "0.1.0",
+  "description": "An interaction to allow students identify coordinates or plot points on a graph by clicking on the graph.",
   "main": "src/index.js",
   "dependencies": {
+    "@material-ui/icons": "^1.0.0-beta.43",
     "@pie-lib/charting": "^2.2.0",
     "@pie-lib/correct-answer-toggle": "^2.0.6",
     "@pie-lib/render-ui": "^2.0.7",
     "debug": "^3.1.0",
     "material-ui": "1.0.0-beta.44",
-    "@material-ui/icons": "^1.0.0-beta.43",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
