--- a/packages/likert-choice/package.json
+++ b/packages/likert-choice/package.json
@@ -25,16 +25,18 @@
   "dependencies": {
     "@pie-lib/correct-answer-toggle": "^2.0.6",
     "@pie-lib/render-ui": "^2.0.7",
+    "classnames": "^2.2.5",
     "debug": "^3.1.0",
     "enzyme-to-json": "^3.3.3",
     "katex": "^0.9.0",
     "lodash": "^4.17.5",
-    "material-ui": "^1.0.0-beta.43",
+    "material-ui": "^1.0.0-beta.44",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-test-renderer": "^16.3.2",
-    "react-transition-group": "^2.3.1"
+    "react-transition-group": "^2.3.1",
+    "webpack": "^4.6.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
