--- a/packages/number-line-controller/package.json
+++ b/packages/number-line-controller/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@pie-ui/number-line-controller",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Controller logic for @pie-ui/number-line",
-  "keywords": ["pie", "number-line"],
+  "keywords": [
+    "pie",
+    "number-line"
+  ],
   "repository": "pie-framework/pie-ui",
   "main": "lib/index.js",
   "publishConfig": {
