--- a/packages/placement-ordering/package.json
+++ b/packages/placement-ordering/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@pie-ui/placement-ordering",
-  "version": "3.0.1",
+  "version": "4.0.0",
   "main": "lib/index.js",
   "description": "A pie placement component",
-  "keywords": ["pie"],
+  "keywords": [
+    "pie"
+  ],
   "repository": "pie-framework/pie-ui",
   "publishConfig": {
     "access": "public"
