--- a/packages/point-intercept/package.json
+++ b/packages/point-intercept/package.json
@@ -3,9 +3,8 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "0.1.0",
-  "description":
-    "An interaction to allow students identify coordinates or plot points on a graph by clicking on the graph.",
+  "version": "1.0.0",
+  "description": "An interaction to allow students identify coordinates or plot points on a graph by clicking on the graph.",
   "main": "lib/index.js",
   "dependencies": {
     "@material-ui/icons": "^1.0.0-beta.43",
