--- a/packages/point-intercept/package.json
+++ b/packages/point-intercept/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.3.2"
   },
   "devDependencies": {
+    "@pie-lib/test-utils": "0.0.2",
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
