--- a/packages/select-text/package.json
+++ b/packages/select-text/package.json
@@ -7,11 +7,13 @@
   "description": "",
   "main": "lib/index.js",
   "dependencies": {
+    "@pie-lib/correct-answer-toggle": "2.0.9",
     "@pie-lib/text-select": "next",
     "@pie-framework/pie-player-events": "^0.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "prop-types": "^15.6.1"
+    "prop-types": "^15.6.1",
+    "material-ui": "1.0.0-beta.44"
   },
   "author": "",
   "license": "ISC"
