--- a/packages/select-text/package.json
+++ b/packages/select-text/package.json
@@ -3,17 +3,17 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "lib/index.js",
   "dependencies": {
+    "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/correct-answer-toggle": "2.0.9",
     "@pie-lib/text-select": "next",
-    "@pie-framework/pie-player-events": "^0.1.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "material-ui": "1.0.0-beta.44",
     "prop-types": "^15.6.1",
-    "material-ui": "1.0.0-beta.44"
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
   },
   "author": "",
   "license": "ISC"
