--- a/packages/point-intercept/package.json
+++ b/packages/point-intercept/package.json
@@ -4,7 +4,8 @@
     "access": "public"
   },
   "version": "1.0.1",
-  "description": "An interaction to allow students identify coordinates or plot points on a graph by clicking on the graph.",
+  "description":
+    "An interaction to allow students identify coordinates or plot points on a graph by clicking on the graph.",
   "main": "lib/index.js",
   "dependencies": {
     "@material-ui/icons": "^1.0.0-beta.43",
@@ -15,25 +16,6 @@
     "material-ui": "1.0.0-beta.44",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
-  },
-  "devDependencies": {
-    "@pie-lib/test-utils": "0.0.2",
-    "babel": "^6.23.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-jest": "^22.4.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.3",
-    "jest": "^22.4.3"
-  },
-  "scripts": {
-    "test": "./node_modules/.bin/jest"
   },
   "author": "",
   "license": "ISC"
