fix(build): remove build libs now in @pie-framework/build-helper

--- a/package.json
+++ b/package.json
@@ -13,25 +13,26 @@
     "build": "npm run clean && npm run lint && lerna exec -- \\$LERNA_ROOT_PATH/node_modules/.bin/babel --ignore '/__test__/','/__tests__/' src -d lib --copy-files"
   },
   "devDependencies": {
+    "@pie-framework/build-helper": "^1.0.2",
     "@pie-lib/test-utils": "0.0.3",
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.3",
-    "babel-plugin-transform-builtin-extend": "^1.1.2",
-    "debug": "^3.1.0",
-    "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.7.0",
-    "lerna": "^2.11.0",
-    "jest": "^22.4.3",
-    "babel-jest": "^22.4.3",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-0": "^6.24.1",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
+    "babel-jest": "^22.4.3",
+    "babel-plugin-transform-builtin-extend": "^1.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "debug": "^3.1.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.3",
+    "eslint": "^4.19.1",
+    "eslint-plugin-react": "^7.7.0",
+    "jest": "^22.4.3",
+    "lerna": "^2.11.0",
+    "minimist": "^1.2.0",
     "react": "^16.3.2",
-    "react-dom": "16.3.2",
-    "minimist": "^1.2.0"
+    "react-dom": "16.3.2"
   }
 }
