feat: upgrade material-ui -> @material-ui/core@^1.0.0-rc.1

--- a/packages/protractor/package.json
+++ b/packages/protractor/package.json
@@ -2,19 +2,16 @@
   "name": "@pie-ui/protractor",
   "version": "2.0.1",
   "description": "A protractor custom element",
-  "keywords": [
-    "pie",
-    "protractor"
-  ],
+  "keywords": ["pie", "protractor"],
   "main": "lib/index.js",
   "publishConfig": {
     "access": "public"
   },
   "scripts": {},
   "dependencies": {
-    "@pie-lib/tools": "^0.4.0",
+    "@pie-lib/tools": "^0.7.0",
     "classnames": "^2.2.5",
-    "material-ui": "^1.0.0-beta.44",
+    "@material-ui/core": "^1.0.0-rc.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
