--- a/packages/select-text/package.json
+++ b/packages/select-text/package.json
@@ -8,10 +8,10 @@
   "main": "lib/index.js",
   "dependencies": {
     "@pie-framework/pie-player-events": "^0.1.0",
-    "@pie-lib/correct-answer-toggle": "2.0.9",
-    "@pie-lib/render-ui": "^2.0.10",
-    "@pie-lib/text-select": "^1.1.0",
-    "material-ui": "^1.0.0-beta.44",
+    "@pie-lib/correct-answer-toggle": "2.1.0",
+    "@pie-lib/render-ui": "^2.1.0",
+    "@pie-lib/text-select": "^1.2.0",
+    "@material-ui/core": "^1.0.0-rc.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
