--- a/packages/calculator/package.json
+++ b/packages/calculator/package.json
@@ -9,10 +9,10 @@
   "author": "pie framework developers",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/icons": "^1.0.0-beta.43",
-    "@pie-framework/material-ui-calculator": "^2.0.0",
+    "@material-ui/icons": "^1.0.0-rc.0",
+    "@pie-framework/material-ui-calculator": "^2.1.0",
     "classnames": "^2.2.5",
-    "material-ui": "^1.0.0-beta.44",
+    "@material-ui/core": "^1.0.0-rc.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
