--- a/packages/categorize/package.json
+++ b/packages/categorize/package.json
@@ -9,9 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@pie-lib/correct-answer-toggle": "^2.0.10",
-    "@pie-lib/drag": "^0.1.0",
-    "material-ui": "^1.0.0-beta.47",
+    "@pie-lib/correct-answer-toggle": "^2.1.0",
+    "@pie-lib/drag": "^0.2.0",
+    "@material-ui/core": "^1.0.0-rc.1",
     "react-dnd": "^3.0.0",
     "react-dnd-html5-backend": "^2.6.0"
   },
