--- a/packages/extended-text-entry/package.json
+++ b/packages/extended-text-entry/package.json
@@ -10,13 +10,13 @@
   "author": "pie framework developers",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/icons": "^1.0.0-beta.43",
+    "@material-ui/icons": "^1.0.0-rc.0",
     "@pie-framework/pie-player-events": "^0.1.0",
-    "@pie-lib/editable-html": "^5.0.12",
-    "@pie-lib/render-ui": "^2.0.10",
+    "@pie-lib/editable-html": "^5.1.0",
+    "@pie-lib/render-ui": "^2.1.0",
     "debug": "^3.1.0",
     "lodash.throttle": "^4.1.1",
-    "material-ui": "^1.0.0-beta.44",
+    "@material-ui/core": "^1.0.0-rc.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
