--- a/packages/function-entry/package.json
+++ b/packages/function-entry/package.json
@@ -8,9 +8,9 @@
   },
   "dependencies": {
     "@pie-framework/pie-player-events": "^0.1.0",
-    "@pie-lib/render-ui": "^2.0.7",
+    "@pie-lib/render-ui": "^2.1.0",
     "classnames": "^2.2.5",
-    "material-ui": "^1.0.0-beta.44",
+    "@material-ui/core": "^1.0.0-rc.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
