--- a/packages/inline-choice/package.json
+++ b/packages/inline-choice/package.json
@@ -11,11 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@pie-framework/pie-player-events": "^0.1.0",
-    "@pie-lib/icons": "^2.1.4",
-    "@pie-lib/render-ui": "^2.0.7",
+    "@pie-lib/icons": "^2.2.0",
+    "@pie-lib/render-ui": "^2.1.0",
     "classnames": "^2.2.5",
-    "lodash": "^4.17.5",
-    "material-ui": "^1.0.0-beta.43",
+    "lodash": "^4.17.10",
+    "@material-ui/core": "^1.0.0-rc.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
