--- a/packages/number-line/package.json
+++ b/packages/number-line/package.json
@@ -10,12 +10,13 @@
   "author": "pie framework developers",
   "license": "ISC",
   "dependencies": {
-    "@pie-lib/correct-answer-toggle": "^2.0.6",
-    "@pie-lib/icons": "^2.1.4",
+    "@pie-lib/correct-answer-toggle": "^2.1.0",
+    "@pie-lib/icons": "^2.2.0",
+    "@material-ui/core": "^1.0.0-rc.1",
     "classnames": "^2.2.5",
     "d3-scale": "^2.0.0",
     "d3-selection": "^1.3.0",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.10",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
