--- a/packages/placement-ordering/package.json
+++ b/packages/placement-ordering/package.json
@@ -3,9 +3,7 @@
   "version": "4.1.1",
   "main": "lib/index.js",
   "description": "A pie placement component",
-  "keywords": [
-    "pie"
-  ],
+  "keywords": ["pie"],
   "repository": "pie-framework/pie-ui",
   "publishConfig": {
     "access": "public"
@@ -14,14 +12,14 @@
     "test": "./node_modules/.bin/jest"
   },
   "dependencies": {
-    "@pie-lib/correct-answer-toggle": "^2.0.10",
-    "@pie-lib/drag": "^0.1.0",
-    "@pie-lib/render-ui": "^2.0.11",
+    "@pie-lib/correct-answer-toggle": "^2.1.0",
+    "@pie-lib/drag": "^0.2.0",
+    "@pie-lib/render-ui": "^2.1.0",
     "debug": "^3.1.0",
     "decimal.js": "^10.0.0",
     "katex": "^0.9.0",
     "lodash": "^4.17.10",
-    "material-ui": "1.0.0-beta.47",
+    "@material-ui/core": "^1.0.0-rc.1",
     "prop-types": "^15.6.1",
     "react": "~16.3.2",
     "react-dnd": "^3.0.0",
