--- a/packages/point-intercept/package.json
+++ b/packages/point-intercept/package.json
@@ -4,15 +4,16 @@
     "access": "public"
   },
   "version": "1.0.2",
-  "description": "An interaction to allow students identify coordinates or plot points on a graph by clicking on the graph.",
+  "description":
+    "An interaction to allow students identify coordinates or plot points on a graph by clicking on the graph.",
   "main": "lib/index.js",
   "dependencies": {
-    "@material-ui/icons": "^1.0.0-beta.43",
-    "@pie-lib/charting": "^2.2.0",
-    "@pie-lib/correct-answer-toggle": "^2.0.6",
-    "@pie-lib/render-ui": "^2.0.7",
+    "@material-ui/icons": "^1.0.0-rc.0",
+    "@pie-lib/charting": "^2.2.3",
+    "@pie-lib/correct-answer-toggle": "^2.1.0",
+    "@pie-lib/render-ui": "^2.1.0",
     "debug": "^3.1.0",
-    "material-ui": "1.0.0-beta.44",
+    "@material-ui/core": "^1.0.0-rc.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
