--- a/packages/ruler/package.json
+++ b/packages/ruler/package.json
@@ -11,10 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@pie-framework/pie-player-events": "^0.1.0",
-    "@pie-lib/tools": "^0.5.0",
-    "material-ui": "^1.0.0-beta.44",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "@pie-lib/tools": "^0.7.0",
+    "@material-ui/core": "^1.0.0-rc.1",
+    "prop-types": "^15.6.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
   }
 }
