--- a/packages/placement-ordering/package.json
+++ b/packages/placement-ordering/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@pie-ui/placement-ordering",
-  "version": "4.1.1",
+  "version": "4.2.0",
   "main": "lib/index.js",
   "description": "A pie placement component",
-  "keywords": ["pie"],
+  "keywords": [
+    "pie"
+  ],
   "repository": "pie-framework/pie-ui",
   "publishConfig": {
     "access": "public"
@@ -12,6 +14,7 @@
     "test": "./node_modules/.bin/jest"
   },
   "dependencies": {
+    "@material-ui/core": "^1.0.0-rc.1",
     "@pie-lib/correct-answer-toggle": "^2.1.0",
     "@pie-lib/drag": "^0.2.0",
     "@pie-lib/render-ui": "^2.1.0",
@@ -19,7 +22,6 @@
     "decimal.js": "^10.0.0",
     "katex": "^0.9.0",
     "lodash": "^4.17.10",
-    "@material-ui/core": "^1.0.0-rc.1",
     "prop-types": "^15.6.1",
     "react": "~16.3.2",
     "react-dnd": "^3.0.0",
