--- a/packages/multiple-choice/package.json
+++ b/packages/multiple-choice/package.json
@@ -1,8 +1,13 @@
 {
   "name": "@pie-ui/multiple-choice",
   "description": "A pie multiple choice component",
-  "keywords": ["pie", "pie-ui", "custom-element", "react"],
-  "version": "4.0.1",
+  "keywords": [
+    "pie",
+    "pie-ui",
+    "custom-element",
+    "react"
+  ],
+  "version": "4.1.0",
   "main": "lib/index.js",
   "repository": "pie-framework/pie-elements.git",
   "publishConfig": {
@@ -13,13 +18,13 @@
     "test": "./node_modules/.bin/jest"
   },
   "dependencies": {
+    "@material-ui/core": "^1.0.0-rc.1",
     "@pie-lib/correct-answer-toggle": "^2.1.0",
     "@pie-lib/render-ui": "^2.1.0",
     "debug": "^3.1.0",
     "enzyme-to-json": "^3.3.3",
     "katex": "^0.9.0",
     "lodash": "^4.17.10",
-    "@material-ui/core": "^1.0.0-rc.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
