--- a/packages/point-intercept/package.json
+++ b/packages/point-intercept/package.json
@@ -3,17 +3,16 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "1.0.2",
-  "description":
-    "An interaction to allow students identify coordinates or plot points on a graph by clicking on the graph.",
+  "version": "1.1.0",
+  "description": "An interaction to allow students identify coordinates or plot points on a graph by clicking on the graph.",
   "main": "lib/index.js",
   "dependencies": {
+    "@material-ui/core": "^1.0.0-rc.1",
     "@material-ui/icons": "^1.0.0-rc.0",
     "@pie-lib/charting": "^2.2.3",
     "@pie-lib/correct-answer-toggle": "^2.1.0",
     "@pie-lib/render-ui": "^2.1.0",
     "debug": "^3.1.0",
-    "@material-ui/core": "^1.0.0-rc.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
