--- a/packages/text-entry/package.json
+++ b/packages/text-entry/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@pie-ui/text-entry",
   "description": "A pie text-entry component",
-  "keywords": ["pie", "pie-elements"],
-  "version": "3.0.1",
+  "keywords": [
+    "pie",
+    "pie-elements"
+  ],
+  "version": "3.1.0",
   "main": "lib/index.js",
   "repository": "pie-framework/pie-ui",
   "publishConfig": {
@@ -13,12 +16,12 @@
     "test": "./node_modules/.bin/jest"
   },
   "dependencies": {
+    "@material-ui/core": "^1.0.0-rc.1",
     "@material-ui/icons": "^1.0.0-rc.0",
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/render-ui": "^2.1.0",
     "debug": "^3.1.0",
     "lodash": "^4.17.10",
-    "@material-ui/core": "^1.0.0-rc.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-number-format": "PieElements/react-number-format#feature/bad-input",
