feat(multiple-choice): wrapped the element with the preview layout

--- a/packages/multiple-choice/package.json
+++ b/packages/multiple-choice/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^1.0.0-rc.1",
+    "@pie-lib/config-ui": "^7.7.16",
     "@pie-lib/correct-answer-toggle": "^2.1.0",
     "@pie-lib/math-rendering": "^1.0.0",
     "@pie-lib/render-ui": "^2.1.0",
