--- a/packages/calculator/package.json
+++ b/packages/calculator/package.json
@@ -9,7 +9,7 @@
   "author": "pie framework developers",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^1.0.0-rc.1",
+    "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^1.0.0-rc.0",
     "@pie-framework/material-ui-calculator": "^3.0.2",
     "classnames": "^2.2.5",
