--- a/packages/extended-text-entry/package.json
+++ b/packages/extended-text-entry/package.json
@@ -10,7 +10,7 @@
   "author": "pie framework developers",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^1.0.0-rc.1",
+    "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^1.0.0-rc.0",
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/editable-html": "^6.1.0",
