--- a/packages/function-entry/package.json
+++ b/packages/function-entry/package.json
@@ -7,7 +7,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@material-ui/core": "^1.0.0-rc.1",
+    "@material-ui/core": "^3.9.2",
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/render-ui": "^2.1.0",
     "classnames": "^2.2.5",
