--- a/packages/inline-choice/package.json
+++ b/packages/inline-choice/package.json
@@ -10,7 +10,7 @@
   "author": "pie framework developers",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^1.0.0-rc.1",
+    "@material-ui/core": "^3.9.2",
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/icons": "^2.2.0",
     "@pie-lib/render-ui": "^2.1.0",
