--- a/packages/multiple-choice/package.json
+++ b/packages/multiple-choice/package.json
@@ -18,7 +18,7 @@
     "test": "./node_modules/.bin/jest"
   },
   "dependencies": {
-    "@material-ui/core": "^1.0.0-rc.1",
+    "@material-ui/core": "^3.9.2",
     "@pie-lib/config-ui": "^7.8.0",
     "@pie-lib/correct-answer-toggle": "^2.1.0",
     "@pie-lib/math-rendering": "^1.0.0",
