--- a/packages/number-line/package.json
+++ b/packages/number-line/package.json
@@ -10,7 +10,7 @@
   "author": "pie framework developers",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^1.0.0-rc.1",
+    "@material-ui/core": "^3.9.2",
     "@pie-lib/correct-answer-toggle": "^2.1.0",
     "@pie-lib/icons": "^2.2.0",
     "classnames": "^2.2.5",
