--- a/packages/protractor/package.json
+++ b/packages/protractor/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {},
   "dependencies": {
-    "@material-ui/core": "^1.0.0-rc.1",
+    "@material-ui/core": "^3.9.2",
     "@pie-lib/tools": "^0.7.0",
     "classnames": "^2.2.5",
     "react": "^16.3.2",
