--- a/packages/ruler/package.json
+++ b/packages/ruler/package.json
@@ -10,7 +10,7 @@
   "author": "pie framework developers",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^1.0.0-rc.1",
+    "@material-ui/core": "^3.9.2",
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/tools": "^0.7.0",
     "prop-types": "^15.6.1",
