--- a/packages/select-text/package.json
+++ b/packages/select-text/package.json
@@ -7,11 +7,11 @@
   "description": "",
   "main": "lib/index.js",
   "dependencies": {
-    "@material-ui/core": "^1.0.0-rc.1",
+    "@material-ui/core": "^3.9.2",
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/correct-answer-toggle": "2.1.0",
     "@pie-lib/render-ui": "^2.1.0",
-    "@pie-lib/text-select": "^1.2.0",
+    "@pie-lib/text-select": "^1.4.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
