--- a/packages/text-entry/package.json
+++ b/packages/text-entry/package.json
@@ -16,7 +16,7 @@
     "test": "./node_modules/.bin/jest"
   },
   "dependencies": {
-    "@material-ui/core": "^1.0.0-rc.1",
+    "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^1.0.0-rc.0",
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/render-ui": "^2.1.0",
