fix: tag version of math inline

--- a/packages/fill-in-the-blank/package.json
+++ b/packages/fill-in-the-blank/package.json
@@ -20,5 +20,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b"
 }
