--- a/packages/multiple-choice/package.json
+++ b/packages/multiple-choice/package.json
@@ -32,5 +32,6 @@
     "react-dom": "^16.8.1",
     "react-test-renderer": "^16.3.2",
     "react-transition-group": "^2.3.1"
-  }
+  },
+  "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b"
 }
