--- a/packages/text-entry/package.json
+++ b/packages/text-entry/package.json
@@ -26,5 +26,6 @@
     "react-dom": "^16.8.1",
     "react-number-format": "PieElements/react-number-format#feature/bad-input",
     "react-transition-group": "^2.3.1"
-  }
+  },
+  "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b"
 }
