--- a/packages/calculator/package.json
+++ b/packages/calculator/package.json
@@ -17,5 +17,6 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-draggable": "^3.0.5"
-  }
+  },
+  "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b"
 }
