--- a/packages/extended-text-entry/package.json
+++ b/packages/extended-text-entry/package.json
@@ -20,5 +20,6 @@
     "prop-types": "^15.6.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1"
-  }
+  },
+  "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b"
 }
