--- a/packages/function-entry/package.json
+++ b/packages/function-entry/package.json
@@ -16,5 +16,6 @@
     "react-dom": "^16.8.1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b"
 }
