--- a/packages/match/package.json
+++ b/packages/match/package.json
@@ -21,5 +21,6 @@
     "@pie-lib/test-utils": "^0.1.1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b"
 }
