--- a/packages/math-inline/package.json
+++ b/packages/math-inline/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "0.1.0",
+  "version": "0.1.0-premerge",
   "description": "A math interaction, fill-in-the-blank type for expressions or equations.",
   "main": "lib/index.js",
   "dependencies": {
@@ -21,5 +21,6 @@
     "@pie-lib/test-utils": "^0.0.3"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b"
 }
