--- a/packages/number-line/package.json
+++ b/packages/number-line/package.json
@@ -23,5 +23,6 @@
     "react-draggable": "^3.0.5",
     "react-jss": "^8.4.0",
     "react-transition-group": "^2.3.1"
-  }
+  },
+  "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b"
 }
