--- a/packages/protractor/package.json
+++ b/packages/protractor/package.json
@@ -19,5 +19,6 @@
     "react-dom": "^16.8.1"
   },
   "author": "pie framework developers",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b"
 }
