--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,7 @@
 {
-  "lerna": "3.4.0",
-  "packages": [
-    "packages/*"
-  ],
+  "lerna": "3.11.0",
+  "packages": ["packages/*"],
   "version": "independent",
   "npmClient": "yarn",
-  "useWorkspaces": true  
+  "useWorkspaces": true
 }
