--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,15 @@
 language: node_js
 node_js:
   - 9.11.2
+
+stages:
+  - test
+  - name: release-next
+    if: branch = develop
+
+jobs:
+  include:
+    - stage: test
+      script: 'npm run test'
+    - stage: release-next
+      script: 'npm run release:next'
