--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -36,6 +36,7 @@
     "webpack-dev-middleware": "^3.5.2"
   },
   "devDependencies": {
-    "@types/fs-extra": "^5.0.5"
+    "@types/fs-extra": "^5.0.5",
+    "@types/webpack": "^4.4.24"
   }
 }
